--- a/kendoGrid.cshtml
+++ b/kendoGrid.cshtml
@@ -51,7 +51,8 @@
             columns: [
                 {
                     field: "personId",
-                    title: "personId"
+                    title: "personId",
+                    hidden: true,
                 }, {
                     field: "name",
                     title: "Name"
